--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
   <!-- FOOTER -->
   <footer>
-    <section class="container">
+    <section class="container space-between">
       <div>
         <div>Customer Support</div>
         <ul>
